@@ -130,10 +130,14 @@
     <Compile Include="ClassComponents\CommonServiceUser2.cs">
       <SubType>Code</SubType>
     </Compile>
+    <Compile Include="ClassComponents\CommonSub1Impl.cs" />
+    <Compile Include="ClassComponents\CommonSub2Impl.cs" />
     <Compile Include="ClassComponents\ComponentFactory.cs">
       <SubType>Code</SubType>
     </Compile>
     <Compile Include="ClassComponents\CommonImplWithDependancy.cs" />
+    <Compile Include="ClassComponents\ICommonSub1.cs" />
+    <Compile Include="ClassComponents\ICommonSub2.cs" />
     <Compile Include="ClassComponents\NonPublicComponent.cs" />
     <Compile Include="ClassComponents\CustomerValidator.cs" />
     <Compile Include="ClassComponents\IValidator.cs" />
